--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 </span>
             </div>
         </nav>
+        <h1>HELLO WORLD</h1>
+        <h2>Heraljkweaklwrasdasdjklawem</h2>
         <!-- SCRIPTS -->
         <script
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
