--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             rel="stylesheet"
             href="//fonts.googleapis.com/css?family=Roboto:400,500"
         />
-        <link rel="stylesheet" href="/assets/css/style.css" />
-        <link rel="stylesheet" href="/assets/css/main.css"></link>
-        <link rel="stylesheet" href="/assets/css/bootstrap.css">
-        <script src="assets/scripts/uikit.js"></script>
-        <script src="assets/scripts/uikit-icons.js"></script>
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/main.css"></link>
+        <link rel="stylesheet" href="./assets/css/bootstrap.css">
+        <script src="./assets/scripts/uikit.js"></script>
+        <script src="./assets/scripts/uikit-icons.js"></script>
     </head>
     <body>
         <div class="uk-offcanvas-content">
@@ -1000,8 +1000,8 @@
 
 
         <!-- SCRIPT -->
-        <script src="assets/scripts/bootstrap.js"></script>
-        <script src="assets/scripts/script.js"></script>
+        <script src="./assets/scripts/bootstrap.js"></script>
+        <script src="./assets/scripts/script.js"></script>
         <script
             src="//maps.googleapis.com/maps/api/js?key=AIzaSyClyjCemJi4m2q78gNeGkhlckpdH1hzTYA&amp;callback=initMap"
             async
