--- a/login.html
+++ b/login.html
@@ -8,84 +8,86 @@
                     <div class="uk-width-1-1@m">
                         <form class="uk-margin uk-width-large uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
                             <ul class="uk-tab uk-flex-center" uk-grid uk-switcher="animation: uk-animation-fade">
+                            </head>
+                                <body>
                                 <li><a href="#">Sign Up</a></li>
                                 <li><a href="#">Log In</a></li>
-                                <li class="uk-hidden">Forgot Password?</li>
+                                <li class="uk-hidden">Quên mật khẩu?</li>
                             </ul>
                             <ul class="uk-switcher uk-margin">
                                 <li>
-                                    <h3 class="uk-card-title uk-text-center">Sign up today. It's free!</h3>
+                                    <h3 class="uk-card-title uk-text-center">Đăng kí ngay!</h3>
                                     <form>
                                         <div class="uk-margin">
                                             <div class="uk-inline uk-width-1-1">
                                                 <span class="uk-form-icon" uk-icon="icon: user"></span>
-                                                <input class="uk-input uk-form-large" type="text" placeholder="First and last name">
+                                                <input class="uk-input uk-form-large" type="text" placeholder="Tên đăng nhập">
                                             </div>
                                         </div>
                                         <div class="uk-margin">
                                             <div class="uk-inline uk-width-1-1">
                                                 <span class="uk-form-icon" uk-icon="icon: mail"></span>
-                                                <input class="uk-input uk-form-large" type="text" placeholder="Email address">
+                                                <input class="uk-input uk-form-large" type="text" placeholder="Địa chỉ email">
                                             </div>
                                         </div>
                                         <div class="uk-margin">
                                             <div class="uk-inline uk-width-1-1">
                                                 <span class="uk-form-icon" uk-icon="icon: lock"></span>
-                                                <input class="uk-input uk-form-large" type="password" placeholder="Set a password">	
+                                                <input class="uk-input uk-form-large" type="password" placeholder="Mật khẩu">	
                                             </div>
                                         </div>
                                         <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-                                            <label><input class="uk-checkbox" type="checkbox"> I agree the Terms and Conditions.</label>
+                                            <label><input class="uk-checkbox" type="checkbox"> Tôi đồng ý với điều khoản </label>
                                         </div>
                                         <div class="uk-margin">
-                                            <button class="uk-button uk-button-primary uk-button-large uk-width-1-1">Login</button>
+                                            <button class="uk-button uk-button-primary uk-button-large uk-width-1-1">Đăng nhập</button>
                                         </div>
                                         <div class="uk-text-small uk-text-center">
-                                            Already have an account? <a href="#" uk-switcher-item="1">Log in</a>
+                                            Already have an account? <a href="#" uk-switcher-item="1">Đăng nhập</a>
                                         </div>
                                     </form>
                                 </li>
                                 <li>
-                                    <h3 class="uk-card-title uk-text-center">Welcome back!</h3>
+                                    <h3 class="uk-card-title uk-text-center">Welcome!</h3>
                                     <form>
                                         <div class="uk-margin">
                                             <div class="uk-inline uk-width-1-1">
                                                 <span class="uk-form-icon" uk-icon="icon: mail"></span>
-                                                <input class="uk-input uk-form-large" type="text" placeholder="Email address">
+                                                <input class="uk-input uk-form-large" type="text" placeholder="Địa chỉ email">
                                             </div>
                                         </div>
                                         <div class="uk-margin">
                                             <div class="uk-inline uk-width-1-1">
                                                 <span class="uk-form-icon" uk-icon="icon: lock"></span>
-                                                <input class="uk-input uk-form-large" type="password" placeholder="Password">	
+                                                <input class="uk-input uk-form-large" type="password" placeholder="Mật khẩu">	
                                             </div>
                                         </div>
                                         <div class="uk-margin uk-text-right@s uk-text-center uk-text-small">
-                                            <a href="#" uk-switcher-item="2">Forgot Password?</a>
+                                            <a href="#" uk-switcher-item="2">Quên mật khẩu?</a>
                                         </div>
                                         <div class="uk-margin">
                                             <button class="uk-button uk-button-primary uk-button-large uk-width-1-1">Login</button>
                                         </div>
                                         <div class="uk-text-small uk-text-center">
-                                            Not registered? <a href="#" uk-switcher-item="0">Create an account</a>
+                                            Not registered? <a href="#" uk-switcher-item="0">Tạo tài khoản</a>
                                         </div>
                                     </form>
                                 </li>
                                 <li>
                                     <h3 class="uk-card-title uk-text-center">Forgot your password?</h3>
-                                    <p class="uk-text-center uk-width-medium@s uk-margin-auto">Enter your email address and we will send you a link to reset your password.</p>
+                                    <p class="uk-text-center uk-width-medium@s uk-margin-auto">Nhập địa chỉ email để lấy lại mật khẩu</p>
                                     <form>
                                         <div class="uk-margin">
                                             <div class="uk-inline uk-width-1-1">
                                                 <span class="uk-form-icon" uk-icon="icon: mail"></span>
-                                                <input class="uk-input uk-form-large" type="text" placeholder="Email address">
+                                                <input class="uk-input uk-form-large" type="text" placeholder="Địa chỉ email">
                                             </div>
                                         </div>
                                         <div class="uk-margin">
-                                            <button class="uk-button uk-button-primary uk-button-large uk-width-1-1">Send Email</button>
+                                            <button class="uk-button uk-button-primary uk-button-large uk-width-1-1">Gửi email</button>
                                         </div>
                                         <div class="uk-text-small uk-text-center">
-                                            <a href="#" uk-switcher-item="1">Back to login</a>
+                                            <a href="#" uk-switcher-item="1">Trở về trang chủn</a>
                                         </div>
                                     </form>
                                 </li>
