Trang san pham (#12)
add product and order page

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                     </div>
                 </div>
             </header>
-            <main class="uk-container"">
+            <main class="uk-container">
                 <!-- NAV-FIRST -->
                 <div class="nav-begin justify-content-between">
                     <h2 class="title-main">MEN</h2>
