--- a/account.html
+++ b/account.html
@@ -527,7 +527,7 @@
                                         >
                                     </li>
                                     <li>
-                                        <a href="#>Thông tin</a>
+                                        <a href="#">Thông tin</a>
                                     </li>
                                     <li>
                                         <a href="#">Thông báo <span class="uk-badge">2</span></a>
@@ -626,7 +626,7 @@
                                                         <span>(3)</span></a
                                                     >
                                                 </li>
-                                                <li>
+                                                <li >
                                                     <a href="personal.html"
                                                         >Thông tin cá nhân</a
                                                     >
