Trang san pham (#14)
add order
add product detail

--- a/account.html
+++ b/account.html
@@ -84,6 +84,8 @@
                                                                     <a
                                                                         href="#"
                                                                         >Áo Khoác</a
+                                                                        href="#"
+                                                                        >Áo Khoác</a
                                                                     >
                                                                 </li>
                                                                 <li>
@@ -626,7 +628,7 @@
                                                         <span>(3)</span></a
                                                     >
                                                 </li>
-                                                <li>
+                                                <li >
                                                     <a href="personal.html"
                                                         >Thông tin cá nhân</a
                                                     >
